Closed Bug 1563027 Opened 7 years ago Closed 6 years ago

h2 tunnel streams queued for reaching session parallelism limits are not dequeued

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla70
Tracking Status
firefox69 --- fixed
firefox70 --- fixed

People

(Reporter: mayhemer, Assigned: mayhemer)

References

Details

(Whiteboard: [necko-triaged][secure-proxy][skyline])

Attachments

(1 file)

P3 because when we have bug 1562885, this is WONTFIX. Still, should be at least tracked.

Looks like the reason we are broken here is that we consume the CONNECT request stream before we check for concurrency room. The request data then gets lost and when the stream is dequeued (that actually works) we don't have anything to write.

Assignee: nobody → honzab.moz

Doesn't really help.

Assignee: honzab.moz → nobody
Whiteboard: [necko-triaged]
Priority: P3 → P1

I think

Assignee: nobody → honzab.moz
Status: NEW → ASSIGNED
Whiteboard: [necko-triaged] → [necko-triaged][secure-proxy][skyline]

This bug is real. On some heavier websites linking h1 end points, or reddit and proxy per-ses parallelism limited to 3 streams, I'm getting indefinite hangs. W/ the fix (and checking that it hits the code) there are no hangs at all.

Attachment #9075650 - Attachment description: Bug 1563027 - DRAFT: Properly dequeue tunnel streams that were queued because of high concurrency → Bug 1563027 - Properly dequeue tunnel streams that were queued because of high concurrency, r=dragana
Pushed by honzab.moz@firemni.cz: https://hg.mozilla.org/integration/autoland/rev/3cc56185d9bc Properly dequeue tunnel streams that were queued because of high concurrency, r=dragana
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla70

Comment on attachment 9075650 [details]
Bug 1563027 - Properly dequeue tunnel streams that were queued because of high concurrency, r=dragana

Beta/Release Uplift Approval Request

  • User impact if declined: Network requests hanging, sometimes until browser restart, when h2 proxy is configured, see Comment 5 for details.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): It's hard to assess for me, but this code is hit quite often, so we would already find problems with just Nightly coverage.
  • String changes made/needed:
Attachment #9075650 - Flags: approval-mozilla-beta?

Comment on attachment 9075650 [details]
Bug 1563027 - Properly dequeue tunnel streams that were queued because of high concurrency, r=dragana

Fixes hung network streams in some circumstances. Approved for 69.0b14.

Attachment #9075650 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: