Bug 1563027 - Properly dequeue tunnel streams that were queued because of high concurrency, r=dragana

Differential Revision: https://phabricator.services.mozilla.com/D36749

--HG--
extra : moz-landing-system : lando